--- a/interface/interface.html
+++ b/interface/interface.html
@@ -14,8 +14,7 @@
 
  <div class="title">myREST Interface</div>
 
- <div class="title">Lights</div>
- <div><span class="status" id="lightStatus">Offline</span></div>
+ <div class="title">Lights<span class="status" id="lightStatus">Offline</span></div>
 
   <div class="buttonBlock"><span class="buttonTitle">L1</span>
         <button class="off-button-inactive" type="button" id="1" onClick="buttonClick(this.id)">Off</button>
@@ -60,9 +59,7 @@
   </div>
 
 
- <div class="title">Sprinklers</div>
- <div><span class="status" id="garageStatus">Offline</span></div>
-
+ <div class="title">Sprinklers<span class="status" id="garageStatus">Offline</span></div>
 
   <div class="buttonBlock"><span class="buttonTitle">S1</span>
         <button class="off-button-inactive" type="button" id="25" onClick="buttonClick(this.id)">Off</button>
