updated class organization for buttons. see the following switch in function get_device_status() in scripts.js to do the rest of the buttons. switch(json_data.Dim0) {  }

--- a/interface/interface.html
+++ b/interface/interface.html
@@ -16,75 +16,75 @@
 
  <div class="title">Lights<span class="status" id="lightStatus">Offline</span></div>
 
-  <div class="buttonBlock"><span class="buttonTitle">L1</span>
-        <button class="off-button-inactive" type="button" id="1" onClick="buttonClick(this.id)">Off</button>
-        <button class="on-button-inactive" type="button" id="2" onClick="buttonClick(this.id)">Low</button>
-        <button class="on-button-inactive" type="button" id="3" onClick="buttonClick(this.id)">Med</button>
-        <button class="on-button-inactive" type="button" id="4" onClick="buttonClick(this.id)">On</button>
+  <div class="buttonBlock" id="L1"><span class="buttonTitle">L1</span>
+        <button class="off button" type="button" id="1" onClick="buttonClick(this.id)">Off</button>
+        <button class="on button" type="button" id="2" onClick="buttonClick(this.id)">Low</button>
+        <button class="on button" type="button" id="3" onClick="buttonClick(this.id)">Med</button>
+        <button class="on button" type="button" id="4" onClick="buttonClick(this.id)">On</button>
   </div>
 
-  <div class="buttonBlock"><span class="buttonTitle">L2</span>
-        <button class="off-button-inactive" type="button" id="5" onClick="buttonClick(this.id)">Off</button>
-        <button class="on-button-inactive" type="button" id="6" onClick="buttonClick(this.id)">Low</button>
-        <button class="on-button-inactive" type="button" id="7" onClick="buttonClick(this.id)">Med</button>
-        <button class="on-button-inactive" type="button" id="8" onClick="buttonClick(this.id)">On</button>
+  <div class="buttonBlock" id="L2"><span class="buttonTitle">L2</span>
+        <button class="off button" type="button" id="5" onClick="buttonClick(this.id)">Off</button>
+        <button class="on button" type="button" id="6" onClick="buttonClick(this.id)">Low</button>
+        <button class="on button" type="button" id="7" onClick="buttonClick(this.id)">Med</button>
+        <button class="on button" type="button" id="8" onClick="buttonClick(this.id)">On</button>
   </div>
 
-  <div class="buttonBlock"><span class="buttonTitle">L3</span>
-        <button class="off-button-inactive" type="button" id="9" onClick="buttonClick(this.id)">Off</button>
-        <button class="on-button-inactive" type="button" id="10" onClick="buttonClick(this.id)">Low</button>
-        <button class="on-button-inactive" type="button" id="11" onClick="buttonClick(this.id)">Med</button>
-        <button class="on-button-inactive" type="button" id="12" onClick="buttonClick(this.id)">On</button>
+  <div class="buttonBlock" id="L3"><span class="buttonTitle">L3</span>
+        <button class="off button" type="button" id="9" onClick="buttonClick(this.id)">Off</button>
+        <button class="on button" type="button" id="10" onClick="buttonClick(this.id)">Low</button>
+        <button class="on button" type="button" id="11" onClick="buttonClick(this.id)">Med</button>
+        <button class="on button" type="button" id="12" onClick="buttonClick(this.id)">On</button>
   </div>
 
-  <div class="buttonBlock"><span class="buttonTitle">L4</span>
-        <button class="off-button-inactive" type="button" id="13" onClick="buttonClick(this.id)">Off</button>
-        <button class="on-button-inactive" type="button" id="14" onClick="buttonClick(this.id)">Low</button>
-        <button class="on-button-inactive" type="button" id="15" onClick="buttonClick(this.id)">Med</button>
-        <button class="on-button-inactive" type="button" id="16" onClick="buttonClick(this.id)">On</button>
+  <div class="buttonBlock" id="L4"><span class="buttonTitle">L4</span>
+        <button class="off button" type="button" id="13" onClick="buttonClick(this.id)">Off</button>
+        <button class="on button" type="button" id="14" onClick="buttonClick(this.id)">Low</button>
+        <button class="on button" type="button" id="15" onClick="buttonClick(this.id)">Med</button>
+        <button class="on button" type="button" id="16" onClick="buttonClick(this.id)">On</button>
   </div>
 
-  <div class="buttonBlock"><span class="buttonTitle">L5</span>
-        <button class="off-button-inactive" type="button" id="17" onClick="buttonClick(this.id)">Off</button>
-        <button class="on-button-inactive" type="button" id="18" onClick="buttonClick(this.id)">Low</button>
-        <button class="on-button-inactive" type="button" id="19" onClick="buttonClick(this.id)">Med</button>
-        <button class="on-button-inactive" type="button" id="20" onClick="buttonClick(this.id)">On</button>
+  <div class="buttonBlock" id="L5"><span class="buttonTitle">L5</span>
+        <button class="off button" type="button" id="17" onClick="buttonClick(this.id)">Off</button>
+        <button class="on button" type="button" id="18" onClick="buttonClick(this.id)">Low</button>
+        <button class="on button" type="button" id="19" onClick="buttonClick(this.id)">Med</button>
+        <button class="on button" type="button" id="20" onClick="buttonClick(this.id)">On</button>
   </div>
 
-  <div class="buttonBlock"><span class="buttonTitle">L6</span>
-        <button class="off-button-inactive" type="button" id="21" onClick="buttonClick(this.id)">Off</button>
-        <button class="on-button-inactive" type="button" id="22" onClick="buttonClick(this.id)">Low</button>
-        <button class="on-button-inactive" type="button" id="23" onClick="buttonClick(this.id)">Med</button>
-        <button class="on-button-inactive" type="button" id="24" onClick="buttonClick(this.id)">On</button>
+  <div class="buttonBlock" id="L6"><span class="buttonTitle">L6</span>
+        <button class="off button" type="button" id="21" onClick="buttonClick(this.id)">Off</button>
+        <button class="on button" type="button" id="22" onClick="buttonClick(this.id)">Low</button>
+        <button class="on button" type="button" id="23" onClick="buttonClick(this.id)">Med</button>
+        <button class="on button" type="button" id="24" onClick="buttonClick(this.id)">On</button>
   </div>
 
 
  <div class="title">Sprinklers<span class="status" id="garageStatus">Offline</span></div>
 
-  <div class="buttonBlock"><span class="buttonTitle">S1</span>
-        <button class="off-button-inactive" type="button" id="25" onClick="buttonClick(this.id)">Off</button>
-        <button class="on-button-inactive" type="button" id="26" onClick="buttonClick(this.id)">On</button>
+  <div class="buttonBlock" id="S1"><span class="buttonTitle">S1</span>
+        <button class="off button" type="button" id="25" onClick="buttonClick(this.id)">Off</button>
+        <button class="on button" type="button" id="26" onClick="buttonClick(this.id)">On</button>
   </div>
 
-  <div class="buttonBlock"><span class="buttonTitle">S2</span>
-        <button class="off-button-inactive" type="button" id="27" onClick="buttonClick(this.id)">Off</button>
-        <button class="on-button-inactive" type="button" id="28" onClick="buttonClick(this.id)">On</button>
+  <div class="buttonBlock" id="S2"><span class="buttonTitle">S2</span>
+        <button class="off button" type="button" id="27" onClick="buttonClick(this.id)">Off</button>
+        <button class="on button" type="button" id="28" onClick="buttonClick(this.id)">On</button>
   </div>
 
-  <div class="buttonBlock"><span class="buttonTitle">S3</span>
-        <button class="off-button-inactive" type="button" id="29" onClick="buttonClick(this.id)">Off</button>
-        <button class="on-button-inactive" type="button" id="30" onClick="buttonClick(this.id)">On</button>
+  <div class="buttonBlock" id="S3"><span class="buttonTitle">S3</span>
+        <button class="off button" type="button" id="29" onClick="buttonClick(this.id)">Off</button>
+        <button class="on button" type="button" id="30" onClick="buttonClick(this.id)">On</button>
   </div>
 
-  <div class="buttonBlock"><span class="buttonTitle">S4</span>
-        <button class="off-button-inactive" type="button" id="31" onClick="buttonClick(this.id)">Off</button>
-        <button class="on-button-inactive" type="button" id="32" onClick="buttonClick(this.id)">On</button>
+  <div class="buttonBlock" id="S4"><span class="buttonTitle">S4</span>
+        <button class="off button" type="button" id="31" onClick="buttonClick(this.id)">Off</button>
+        <button class="on button" type="button" id="32" onClick="buttonClick(this.id)">On</button>
   </div>
 
  <div class="title">Garage Doors</div>
-  <div class="buttonBlock"><span class="buttonTitle"> </span>
-	<button class="on-button-inactive" type="button" id="33" onClick="buttonClick(this.id)">One</button>
-        <button class="on-button-inactive" type="button" id="34" onClick="buttonClick(this.id)">Two</button>
+  <div class="buttonBlock" id="G"><span class="buttonTitle"> </span>
+	<button class="on button" type="button" id="33" onClick="buttonClick(this.id)">One</button>
+        <button class="on button" type="button" id="34" onClick="buttonClick(this.id)">Two</button>
   </div>
 
 </div>
