initial update to styling and modular design

--- a/interface/interface.html
+++ b/interface/interface.html
@@ -14,6 +14,7 @@
 
  <div class="title">myREST Interface</div>
 
+ <div class="sectionContainer">
  <div class="title">Lights<span class="status" id="lightStatus">Offline</span></div>
 
   <div class="buttonBlock" id="L1"><span class="buttonTitle">L1</span>
@@ -57,8 +58,8 @@
         <button class="on button" type="button" id="23" onClick="buttonClick(this.id)">Med</button>
         <button class="on button" type="button" id="24" onClick="buttonClick(this.id)">On</button>
   </div>
-
-
+</div>
+<div class="sectionContainer">
  <div class="title">Sprinklers<span class="status" id="garageStatus">Offline</span></div>
 
   <div class="buttonBlock" id="S1"><span class="buttonTitle">S1</span>
@@ -80,13 +81,14 @@
         <button class="off button" type="button" id="31" onClick="buttonClick(this.id)">Off</button>
         <button class="on button" type="button" id="32" onClick="buttonClick(this.id)">On</button>
   </div>
-
+</div>
+<div class="sectionContainer">
  <div class="title">Garage Doors</div>
   <div class="buttonBlock" id="G"><span class="buttonTitle"> </span>
 	<button class="on button" type="button" id="33" onClick="buttonClick(this.id)">One</button>
         <button class="on button" type="button" id="34" onClick="buttonClick(this.id)">Two</button>
   </div>
-
+</div>
 </div>
 
 </body>
